// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostThreadConnector > Snapshots > matches snapshot with gap-fix variant 1`] = `
<div
  class="flex h-[12px] w-[12px] flex-col items-start"
  data-testid="container"
  data-variant="gap-fix"
  style="height: 100px;"
>
  <div
    class="relative flex min-h-px w-full min-w-px shrink-0 grow basis-0 flex-col items-start"
    data-testid="container"
  >
    <div
      class="min-h-px w-full min-w-px shrink-0 grow basis-0 border-l border-border"
      data-testid="container"
    />
  </div>
</div>
`;

exports[`PostThreadConnector > Snapshots > matches snapshot with large height 1`] = `
<div
  class="flex h-[96px] w-[12px] flex-col items-start border-l border-border"
  data-testid="container"
  data-variant="regular"
  style="height: 300px;"
>
  <div
    class="relative flex min-h-px w-[12px] min-w-px shrink-0 grow basis-0 flex-col items-start"
    data-testid="container"
  >
    <div
      class="min-h-px w-full min-w-px shrink-0 grow basis-0"
      data-testid="container"
    />
    <div
      class="relative size-[12px] shrink-0"
      data-testid="container"
    >
      <svg
        class="block size-full"
        fill="none"
        height="12"
        preserveAspectRatio="none"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 0C1 6.07513 5.92487 11 12 11V12C5.37258 12 0 6.62742 0 0H1Z"
          fill="#303034"
        />
      </svg>
    </div>
  </div>
  <div
    class="min-h-px w-[12px] min-w-px shrink-0 grow basis-0"
    data-testid="container"
  />
</div>
`;

exports[`PostThreadConnector > Snapshots > matches snapshot with last variant 1`] = `
<div
  class="flex h-[96px] w-[12px] flex-col items-start"
  data-testid="container"
  data-variant="last"
  style="height: 100px;"
>
  <div
    class="relative flex min-h-px w-full min-w-px shrink-0 grow basis-0 flex-col items-start"
    data-testid="container"
  >
    <div
      class="min-h-px w-full min-w-px shrink-0 grow basis-0 border-l border-border"
      data-testid="container"
    />
    <div
      class="relative size-[12px] shrink-0"
      data-testid="container"
    >
      <svg
        class="block size-full"
        fill="none"
        height="12"
        preserveAspectRatio="none"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 0C1 6.07513 5.92487 11 12 11V12C5.37258 12 0 6.62742 0 0H1Z"
          fill="#303034"
        />
      </svg>
    </div>
  </div>
  <div
    class="min-h-px w-[12px] min-w-px shrink-0 grow basis-0"
    data-testid="container"
  />
</div>
`;

exports[`PostThreadConnector > Snapshots > matches snapshot with regular variant 1`] = `
<div
  class="flex h-[96px] w-[12px] flex-col items-start border-l border-border"
  data-testid="container"
  data-variant="regular"
  style="height: 100px;"
>
  <div
    class="relative flex min-h-px w-[12px] min-w-px shrink-0 grow basis-0 flex-col items-start"
    data-testid="container"
  >
    <div
      class="min-h-px w-full min-w-px shrink-0 grow basis-0"
      data-testid="container"
    />
    <div
      class="relative size-[12px] shrink-0"
      data-testid="container"
    >
      <svg
        class="block size-full"
        fill="none"
        height="12"
        preserveAspectRatio="none"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 0C1 6.07513 5.92487 11 12 11V12C5.37258 12 0 6.62742 0 0H1Z"
          fill="#303034"
        />
      </svg>
    </div>
  </div>
  <div
    class="min-h-px w-[12px] min-w-px shrink-0 grow basis-0"
    data-testid="container"
  />
</div>
`;

exports[`PostThreadConnector > Snapshots > matches snapshot with small height 1`] = `
<div
  class="flex h-[96px] w-[12px] flex-col items-start border-l border-border"
  data-testid="container"
  data-variant="regular"
  style="height: 50px;"
>
  <div
    class="relative flex min-h-px w-[12px] min-w-px shrink-0 grow basis-0 flex-col items-start"
    data-testid="container"
  >
    <div
      class="min-h-px w-full min-w-px shrink-0 grow basis-0"
      data-testid="container"
    />
    <div
      class="relative size-[12px] shrink-0"
      data-testid="container"
    >
      <svg
        class="block size-full"
        fill="none"
        height="12"
        preserveAspectRatio="none"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 0C1 6.07513 5.92487 11 12 11V12C5.37258 12 0 6.62742 0 0H1Z"
          fill="#303034"
        />
      </svg>
    </div>
  </div>
  <div
    class="min-h-px w-[12px] min-w-px shrink-0 grow basis-0"
    data-testid="container"
  />
</div>
`;
